# k8s-client-plugin-rs

./: Cargo.toml  README.md
kubectl-create-sample/: Cargo.toml
kubectl-create-sample/src/: lib.rs  main.rs
