[package]
name = "kubectl-create-sample"
keywords = ["kubernetes"]
# https://crates.io/category_slugs
categories = ["command-line-interface"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.8"
k8s-openapi = { version = "0.27.0", features = ["v1_34", "schemars"] }
kube = { version = "3.0.0", features = ["derive"] }
log = "0.4.29"
schemars = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
